fixed: added overflow scroll to mobile menu

--- a/css/style.css
+++ b/css/style.css
@@ -1803,6 +1803,7 @@ template {
     bottom: 0;
     top: 78px;
     padding-top: 30px;
+    overflow: scroll;
   }
   .navbar-bottom--visible {
     display: block;
