--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -150,6 +150,7 @@
       bottom: 0
       top: 78px
       padding-top: 30px
+      overflow: scroll
       &--visible
         display: block
     &-menu
